fix(settingsModal): fix flickering on small screen sizes on the settings buttons
fixes: #784

--- a/src/style/settings.module.scss
+++ b/src/style/settings.module.scss
@@ -165,9 +165,11 @@
 
     :local(#settings-footer-btns) > :where(button, a) {
         // some special style needed for the settings modal footer: show button text only on hover
-        > span {
-            font-size: 0;
-            transition: font-size 0.5s;
+        @media screen and (min-width: 992px) and (prefers-reduced-motion: no-preference) {
+            > span {
+                font-size: 0;
+                transition: font-size 0.5s;
+            }
         }
 
         &:hover > span {
